--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "proxy": "http://localhost:3005",
   "main": "server/index.js",
   "dependencies": {
+    "@apollo/client": "^3.1.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-link-ws": "^1.0.20",
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^2.9.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -20,13 +26,17 @@
     "graphql": "^15.3.0",
     "massive": "^6.6.0",
     "react": "^16.13.1",
+    "react-adopt": "^0.6.0",
     "react-apollo": "^3.1.5",
+    "react-chartjs-2": "^2.10.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "subscriptions-transport-ws": "^0.9.17"
   },
   "scripts": {
     "start": "react-scripts start",
