--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "request": "^2.88.2",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "subscriptions-transport-ws": "^0.9.17"
   },
   "scripts": {
